--- a/sistemas embarcados/Makefile
+++ b/sistemas embarcados/Makefile
@@ -1,16 +1,16 @@
 all: testes main
 
-testes: testes.o newtonGregory.o
-	gcc newtonGregory.o testes.o -o testes
+testes: testes.o newton_gregory.o
+	gcc newton_gregory.o testes.o -o testes
 
-main: main.o newtonGregory.o
-	gcc newtonGregory.o main.o -o main
+main: main.o newton_gregory.o
+	gcc newton_gregory.o main.o -o main
 
-testes.o: testes.c newtonGregory.h
+testes.o: testes.c newton_gregory.h
 	gcc -c testes.c
 
-main.o: main.c newtonGregory.h
+main.o: main.c newton_gregory.h
 	gcc -c main.c
 
-newtonGregory.o: newtonGregory.c newtonGregory.h
-	gcc -c newtonGregory.c
+newton_gregory.o: newton_gregory.c newton_gregory.h
+	gcc -c newton_gregory.c
